--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "bootstrap": "^4.1.3"
+    
   }
 }
