--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-if": "^2.0.2",
     "gulp-jade": "^1.1.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
     "gulp-sass": "^4.0.1",
